--- a/src/components/containers/Beers/Beers.scss
+++ b/src/components/containers/Beers/Beers.scss
@@ -1,15 +1,21 @@
 @import '../../../helpers/flex-mixin.scss';
 
 .Beers {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
     @include flexbox();
     @include flex-direction(row);
     @include align-items(flex-start);
     @include justify-content(space-around); 
-    @include align-content(space-between);
+    @include align-content(center);
     @include flex-wrap(wrap);
     .Spinner {
         @include flex(0 0 100%);
+    }
+    .EndLine {
+        @include flex(0 0 100%);
+        height: 5px;
+        margin: 10px 0 10px 0;
+        background-color: #703B09;
     }
 }
