--- a/src/components/presentational/Beer/Beer.scss
+++ b/src/components/presentational/Beer/Beer.scss
@@ -1,21 +1,46 @@
 @import '../../../helpers/flex-mixin.scss';
-* {
-    border: 1px solid red;
-}
+
 .Beer {
-    max-height: 400px;
-    min-height: 300px;
+    margin: 10px;
+    padding: 10px 5px 10px 5px;
     @include flex(0 0 25%);
     @include flexbox();
     @include flex-direction(column);
     @include align-items(center);
     @include justify-content(center);
     @include align-content(center);
+    border-radius: 5px;
+    background-color: lightgray;
+    &:hover {
+        cursor: pointer;
+    }
     img {
-        height: auto;
+        @include flex(0 1 60%);
         max-width: 30%;
+        height: auto;
+    }
+    .TextContainer {
+        @include flex(0 1 30%);
+        @include flexbox();
+        @include flex-direction(column);
+        @include align-items(center);
+        @include justify-content(center);
+        @include align-content(center);
+        margin: 10px 0 10px 0;
+    }
+    .Name{    
+        font-size: 18px;
+        color: rgb(115, 45, 128);
+        font-weight: bold;
+        padding: 10px 10px 2px 10px;
+    }
+    .Tagline {
+        font-size: 12px;
+        color: gray;
+        padding: 2px 10px 10px 10px;
     }
     p {
-
+        text-align: center;
+        margin: 0;
     }
 }
