--- a/src/components/containers/BeerDetails/BeerDetails.scss
+++ b/src/components/containers/BeerDetails/BeerDetails.scss
@@ -33,7 +33,7 @@
                 width: 100%;
             }
         }
-        .OtherImages {
+        .RightPanel {
             @include flexbox();
             @include flex(0 1 65%);
             @include flex-direction(column);
