--- a/src/components/presentational/SimillarBeers/SimillarBeers.scss
+++ b/src/components/presentational/SimillarBeers/SimillarBeers.scss
@@ -1,4 +1,6 @@
-.AbvImages {
+@import '../../../helpers/flex-mixin.scss';
+
+.SimillarBeers {
     @include flexbox();
     @include flex(0 1 70%);
     @include flex-direction(row);
@@ -6,4 +8,12 @@
     @include justify-content(center); 
     @include align-content(center);
     @include flex-wrap(wrap);
+    text-align: center;
+    .Image {
+        @include flex(0 1 30%);
+        >img {
+            height: auto;
+            width: 10%;
+        }
+    }
 }
