--- a/src/components/presentational/BestFood/BestFood.scss
+++ b/src/components/presentational/BestFood/BestFood.scss
@@ -8,12 +8,25 @@
     @include justify-content(flex-start); 
     @include align-content(flex-start);
     @include flex-wrap(nowrap);
+    @media only screen and (max-width : 768px) {
+        @include flex(0 1 100%);
+        @include align-items(center);
+        @include justify-content(center); 
+        @include align-content(center);
+        margin-top: 20px;
+    }
     h4 {
         margin: 5px;
         color: rgb(115, 45, 128);
     }
     p {
         margin: 5px;
-        font-size: 14px;
+        font-size: 12px;
+    }
+
+    h4, p {
+        @media only screen and (max-width : 768px) {
+            text-align: center;
+        }
     }
 }
