--- a/src/components/containers/BeerDetails/BeerDetails.scss
+++ b/src/components/containers/BeerDetails/BeerDetails.scss
@@ -1,9 +1,7 @@
 @import '../../../helpers/flex-mixin.scss';
 
 .BeerDetails {
-    * {
-        border: 1px solid blue;
-    }
+
     @include flexbox();
     @include flex-direction(column);
     @include align-items(center);
@@ -12,23 +10,32 @@
     @include flex-wrap(wrap);
     .Pictures {
         width: 90%;
-        @include flex(0 1 40%);
+        @include flex(0 1 30%);
         @include flexbox();
         @include flex-direction(row);
         @include align-items(center);
-        @include justify-content(space-between); 
+        @include justify-content(center); 
         @include align-content(center);
         @include flex-wrap(center);
+        padding-bottom: 20px;
+        @media only screen and (max-width : 768px) {
+            @include order(1);
+            padding-bottom: none;
+        }
         .MainImage {
             @include flexbox();
             @include flex(0 1 30%);
             @include flex-direction(row);
-            @include align-items(flex-start);
-            @include justify-content(flex-start); 
-            @include align-content(flex-start);
+            @include align-items(center);
+            @include justify-content(center); 
+            @include align-content(center);
             @include flex-wrap(wrap);
+
+            @media only screen and (max-width : 768px) {
+                display: none;
+            }
             img {
-                max-height: 180px;
+                max-height: 220px;
                 height: auto;
                 width: 100%;
             }
@@ -36,12 +43,24 @@
     }
     .TextDescr {
         width: 90%;
-        @include flex(0 1 60%);
+        border-top:  2px solid rgb(115, 45, 128);
+        padding-top: 20px;
+        @include flex(0 1 70%);
         @include flexbox();
         @include flex-direction(row);
         @include align-items(flex-start);
         @include justify-content(space-between); 
         @include align-content(flex-start);
-        @include flex-wrap(nowrap);
+        @include flex-wrap(wrap);
+        @media only screen and (max-width : 768px) {
+            @include order(0);
+            @include align-items(center);
+            @include align-content(center);
+            border-top: none;
+        }
+    }
+
+    .TextDescrHidden {
+        display: none;
     }
 }
