--- a/src/components/containers/Beers/Beers.scss
+++ b/src/components/containers/Beers/Beers.scss
@@ -16,6 +16,6 @@
         @include flex(0 0 100%);
         height: 5px;
         margin: 10px 0 10px 0;
-        background-color: #703B09;
+        background-color: rgb(115, 45, 128);
     }
 }
