--- a/src/components/containers/Modal/Modal.scss
+++ b/src/components/containers/Modal/Modal.scss
@@ -2,17 +2,19 @@
     position: fixed;
     z-index: 500;
     background-color: white;
-    width: 70%;
+    width: 80%;
     border: 1px solid #ccc;
     box-shadow: 1px 1px 1px black;
     padding: 16px;
-    left: 15%;
+    left: 10%;
     top: 10%;
     box-sizing: border-box;
     border-radius: 5px;
     transition: all .4s ease-out;
-    @media (min-width: 600px) {
-        width: 700px;
-        left: calc(50% - 350px);
+    max-height: calc(100vh - 50px);
+    overflow-y: auto;
+    @media (min-width: 767px) {
+        width: 750px;
+        left: calc(50% - 375px);
     }
 }
