--- a/src/components/presentational/Logo/Logo.scss
+++ b/src/components/presentational/Logo/Logo.scss
@@ -1,7 +1,7 @@
 .Logo {
 	height: 100%;
 	padding: 8px;
-	background-color: white;
+	background-color: rgba(115, 45, 128, .9);
 	box-sizing: border-box;
     border-radius: 5px;
     img {
