--- a/src/components/presentational/NavigationItems/NavigationItem/NavigationItem.scss
+++ b/src/components/presentational/NavigationItems/NavigationItem/NavigationItem.scss
@@ -15,16 +15,24 @@
             padding: 16px 10px;
             border-bottom: 4px solid transparent;
         }
-        &:hover, &:active {
+        &:hover, &:active, .active {
             color: #40A4C8;
             @media (min-width: 500px) {
-                background-color: #8F5C2C;
+                background-color: rgb(115, 45, 128);
                 border-bottom: 4px solid #40A4C8;
                 color: white;
             }
         }
     }
-    @media (min-width: 500px) {
+    a.active {
+        color: #40A4C8;
+        @media (min-width: 500px) {
+            background-color:  rgb(115, 45, 128);
+            border-bottom: 4px solid #40A4C8;
+            color: white;
+        }
+    }
+    @media (min-width: 768px) {
         margin: 0;
 		display: flex;
 		height: 100%;
