--- a/src/components/presentational/SimillarBeers/SimillarBeers.scss
+++ b/src/components/presentational/SimillarBeers/SimillarBeers.scss
@@ -7,13 +7,37 @@
     @include align-items(center);
     @include justify-content(center); 
     @include align-content(center);
-    @include flex-wrap(wrap);
+    @include flex-wrap(nowrap);
     text-align: center;
+    @media only screen and (max-width : 768px) {
+        @include flex-wrap(wrap);
+    }
     .Image {
         @include flex(0 1 30%);
+        height: 100%;
+        margin: 5px;
+        padding: 5px;
+        box-sizing: border-box;
+        border: 2px solid lightgray;
+        &:hover {
+            cursor: pointer;
+            border: 2px solid  rgb(115, 45, 128);
+            border-radius: 5px;
+        }
+        @media only screen and (max-width : 768px) {
+            @include flex(0 1 90%);
+        }
+
         >img {
             height: auto;
-            width: 10%;
+            width: 15%;
+            @media only screen and (max-width : 768px) {
+                display: none;
+            }
+        }
+        p {
+            font-size: 13px;
+            margin: 5px;
         }
     }
 }
