--- a/src/components/containers/Beers/Beers.scss
+++ b/src/components/containers/Beers/Beers.scss
@@ -3,12 +3,14 @@
 .Beers {
     width: 90%;
     margin: 0 auto;
+    padding-top: 20px;
     @include flexbox();
     @include flex-direction(row);
     @include align-items(flex-start);
     @include justify-content(space-around); 
     @include align-content(center);
     @include flex-wrap(wrap);
+    padding-bottom: 20px;
     .Spinner {
         @include flex(0 0 100%);
     }
