--- a/src/components/containers/BeerDetails/BeerDetails.scss
+++ b/src/components/containers/BeerDetails/BeerDetails.scss
@@ -20,6 +20,7 @@
         padding-bottom: 20px;
         @media only screen and (max-width : 768px) {
             @include order(1);
+            @include flex-direction(column);
             padding-bottom: none;
         }
         .MainImage {
@@ -30,14 +31,13 @@
             @include justify-content(center); 
             @include align-content(center);
             @include flex-wrap(wrap);
-
-            @media only screen and (max-width : 768px) {
-                display: none;
-            }
             img {
                 max-height: 220px;
                 height: auto;
                 width: 100%;
+                @media only screen and (max-width : 768px) {
+                    display: none;
+                }
             }
         }
     }
