--- a/src/components/presentational/FavBeer/FavBeer.scss
+++ b/src/components/presentational/FavBeer/FavBeer.scss
@@ -14,6 +14,13 @@
     background-color: lightgray;
     box-sizing: border-box;
     border: 2px solid lightgray;
+    i {
+        color: rgb(115, 45, 128);
+        &:hover {
+            opacity: .5;
+            cursor: pointer;
+        }
+    }
     img {
         @include flex(0 1 40%);
         max-width: 7%;
