workigng on look and feel. fav tip added, animation for wheel sign added

--- a/src/components/presentational/Beer/Beer.scss
+++ b/src/components/presentational/Beer/Beer.scss
@@ -13,6 +13,8 @@
     background-color: lightgray;
     box-sizing: border-box;
     border: 2px solid lightgray;
+    animation-duration: 2s;
+    animation-delay: 0.2s;
     @media only screen and (max-width : 768px) {
         @include flex-direction(row);
         @include justify-content(space-around);
