--- a/src/components/presentational/FavCountIndicator/FavCountIndicator.scss
+++ b/src/components/presentational/FavCountIndicator/FavCountIndicator.scss
@@ -86,28 +86,17 @@
             margin-top: 2px;
             border-bottom: 2px solid  rgb(92, 43, 100);
             img {
-                max-width: 10%;
+                max-width: 4%;
                 height: auto;
                 flex: 0 1 5%;
-                max-height: 80%;
+                //max-height: 10%;
                 align-self: center;
+                padding: 10px;
             }
             .TooltipItemDescr {
-                flex: 0 1 60%;
+                flex: 0 1 80%;
                 display: flex;
                 flex-direction: column;
-            }
-
-            .Trash {
-                display: flex;
-                flex-direction: column;
-                flex: 0 1 15%;
-                align-content: center;
-                justify-content: center;
-                align-items: center;
-                i {
-                    font-size: 22px;
-                }
             }
         } 
 }
